<resources>
    <string name="app_name">Planeta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="find">Find</string>
    <string name="delete">Delete</string>
    <string name="read">Read</string>
    <string name="id">ID</string>
    <string name="prestar">Prestar</string>
    <string name="listar">Listar</string>
    <string name="editar">Editar</string>
    <string name="namel">Nombre Libro</string>
    <string name="nameA">Autor</string>

</resources>
